# korrect

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build.sh  devenv.nix
src/: cli.rs  main.rs
test-server/: Cargo.toml
test-server/src/: main.rs
