[package]
name = "k"
version = "0.1.0"
authors = ["dan@badpacket.in"]
edition = "2021"

[dependencies]
#https://doc.rust-lang.org/cargo/reference/resolver.html
anyhow = "^1.0.58"
clap = { version = "4.5.21", features = ["derive", "env", "wrap_help"] }
log = "0.4.14"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
simple_logger = "2.2.0"
tempfile = "3.14.0"
