[package]
name = "korrect"
version = "0.1.0"
authors = ["dan@badpacket.in"]
edition = "2021"
description = "A kubectl version managing shim that invokes the correct kubectl version ☸ "


[[bin]]
name = "korrect"
path = "src/bin/korrect.rs"

[[bin]]
name = "korrect-shim"
path = "src/bin/korrect-shim.rs"

[dependencies]
#https://doc.rust-lang.org/cargo/reference/resolver.html
anyhow = "^1.0.58"
clap = { version = "4.5.21", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.38"
indicatif = "0.17.9"
log = "0.4.14"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
simple_logger = "2.2.0"
tempfile = "3.14.0"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.14.0"
