[package]
name = "korrect"
version = "0.0.1"
authors = ["dan@badpacket.in"]
license = "MIT"
edition = "2021"
repository = "https://gitlab.com/cromulentbanana/korrect/"
description = "A kubectl version managing shim that invokes the correct kubectl version ☸ "
keywords = ["k8s", "kubectl"]
include = [ 
  "**/*.rs",
  "Cargo.toml",
  "Cargo.lock",
]


[[bin]]
name = "korrect"
path = "src/bin/korrect.rs"

[[bin]]
name = "korrect-shim"
path = "src/bin/korrect-shim.rs"

[dependencies]
#https://doc.rust-lang.org/cargo/reference/resolver.html
anyhow = "^1.0.58"
clap = { version = "4.5.21", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.38"
clap_complete_nushell = "4.5.4"
dirs = "5.0.1"
indicatif = "0.17.9"
log = "0.4.14"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "blocking", "json"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
simple_logger = "2.2.0"
tempfile = "3.14.0"

[dev-dependencies]
mockito = "1.6.1"
tempfile = "3.14.0"
